tests/fixtures/readmes/invalid/missing_uploader.readme
Short:        Missing uploader
Type:         util/misc
Architecture: m68k-amigaos

Uploader field is absent.
